--- a/templates/index.html
+++ b/templates/index.html
@@ -7,73 +7,10 @@
   <title>Персональный сайт</title>
 
   <!-- Подключение Bootstrap -->
-	 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-
-  <style>
-    body {
-      font-size: 18px;
-      font-family: monospace;
-      background-color: #0B2447;
-      color:white;
-    }
-
-    .container {
-      max-width: 800px;
-      margin-left: auto;
-      margin-right: auto;
-      text-align: justify;
-      padding: 0 20px;
-    }
-
-    h1 {
-      margin-top: 40px;
-      text-align: center;
-      font-size: 40px;
-      color: #A5D7E8;
-    }
-
-    h2 {
-      margin-top: 40px;
-      text-align: center;
-      font-size: 30px;
-      color: #A5D7E8;
-    }
-
-    p {
-      line-height: 1.5;
-    }
-
-    .project img {
-      border-radius: 10px;
-      width: 500px;
-      max-width:100%;
-    }
-
-    .project .techs {
-      font-size: 14px;
-      font-weight: bold;
-      
-    }
-
-    hr {
-      border: none;
-      border-top: 1px solid grey;
-      margin-top: 40px;
-      margin-bottom: 40px;
-    }
-
-
-    footer {
-      text-align: center;
-      font-size: 14px;
-      color: grey;
-      padding: 40px;
-    }
-
-    
-  </style>
+	 <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous"> -->
+	 <link href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.2/dist/superhero/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
+<body style="padding: 40px;">
 
   {% include 'nav.html' %}
 
@@ -111,7 +48,7 @@
     <div class="project">
       
       <h3>{{project.title}}</h3>
-      <img src="static/{{project.img_link}}" alt="">
+      <img src="static/{{project.img_link}}" style="width: 700px; max-width: 100%;">
       <p>{{project.desc_text}}</p>
 
       {% if 'keywords' in project %}
