--- a/flask_portfolio/templates/index.html
+++ b/flask_portfolio/templates/index.html
@@ -1,82 +1,22 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Персональный сайт</title>
-
-  <!-- Подключение Bootstrap -->
-	 <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous"> -->
-	 <link href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.2/dist/superhero/bootstrap.min.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Flask Portfolio</title>
 </head>
-<body style="padding: 40px;">
+<body>
+    <div class="conteiner">
+        <h1>Привет, добро пожаловать в мое портфолио!</h1>
 
-  {% include 'nav.html' %}
-
-
-  <div class="container">
-      <h1>Веб привет!</h1>
-      <img src="static/banner.jpg" width='100%'>
-    <p>Добро пожаловать на мой персональный сайт! Я профессиональный программист Python и моя цель заключается в создании высококачественного программного обеспечения, которое помогает людям решать реальные проблемы.</p>
-    
-    <h2 id="about">Обо мне</h2>
-    
-    <p>Мой опыт работы включает в себя разработку веб-приложений, создание скриптов для автоматизации бизнес-процессов, анализ данных и многое другое. Я всегда стремлюсь к совершенствованию и дорожу своей репутацией, поэтому моя работа всегда отличается высоким качеством и вниманием к деталям.</p>
-    
-    <h2 id="portfolio">Портфолио</h2>
-
-<!-- 
-    {%  for project in projects  %}
-
-
-    <h3>{{project.title}}</h3>
-
-    <p>{{project.desc_text}}</p>
-
-
-    {% endfor %} -->
-
-
-
-
-
-    
+        <p>Добро пожаловать на мой персональный сайт! Я профессиональный программист Python и моя цель заключается в создании высококачественного программного обеспечения, которое помогает людям решать реальные проблемы.</p>
     
 
-    {% for project in projects %}
-    <div class="project">
-      
-      <h3>{{project.title}}</h3>
-      <img src="static/{{project.img_link}}" style="width: 700px; max-width: 100%;">
-      <p>{{project.desc_text}}</p>
+        <h2>Полезные ссылки</h2>
+        <a href="https://skysmart.ru">Скайсмарт</a>
 
-      {% if 'keywords' in project %}
-
-      <p class='techs'>Технологии: {{project.keywords}}</p>
-      
-      {% endif %}
-
-      <hr>
     </div>
-    {% endfor %}
+
     
-    <h2 id="contacts">Контакты</h2>
-    <p>Спасибо, что посетили мой сайт! Если у вас есть какие-либо вопросы или идеи, не стесняйтесь связаться со мной. Я всегда рад новым знакомствам и возможностям сотрудничества.
-    </p>
-
-
-          
-
-    <footer>
-      <a id='email-link' href='mailto:examplen@example.ru' type="button" class="btn btn-primary btn-lg mb-5">Написать письмо</a><br>
-      &copy; aleksmn, 2023 
-    </footer>
-  </div>
-
-
-
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
